# PracticaAC

./: CMakeLists.txt  README.md  leer.cpp  pruebas.cpp  readme.txt
avignon/: compilar.sh  ejecutar.sh  inf
fluid/: CMakeLists.txt  fluid.cpp
ftest/: CMakeLists.txt  ftest.cpp
sim/: CMakeLists.txt  block.cpp  block.hpp  grid.cpp  grid.hpp  particle.cpp  particle.hpp  progargs.cpp  progargs.hpp  simulacion.cpp  simulacion.hpp  variablesglobales.hpp
utest/: CMakeLists.txt  grid_test.cpp  particle_test.cpp  progargs_test.cpp
